[tool.poetry]
name = "dbgpt_hub"
version = "0.3.1"
description = "DB-GPT-Hub: Text-to-SQL parsing with LLMs"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
include = ["dbgpt_hub/baseline/baseline.json"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
transformers = ">=4.34.1"
peft = ">=0.4.0"
accelerate = ">=0.21.0"
einops = ">=0.6.1"
evaluate = ">=0.4.0"
scikit-learn = ">=1.2.2"
sentencepiece = ">=0.1.99"
func-timeout = "4.3.5"
datasets = ">=2.14.6"
trl = ">=0.5.0"
deepspeed = ">=0.10.2"
matplotlib = "^3.8.1"
sse-starlette = "^1.6.5"
tiktoken = ">=0.5.1"
jieba = "^0.42.1"
rapidfuzz = "^3.5.2"
scipy = "^1.11.3"
sqlparse = "^0.4.4"
nltk = "^3.8.1"
jsonlines = "^4.0.0"
pymysql = "1.1.0"
pyyaml = "6.0.1"
black = "^23.11.0"
pyright = "^1.1.335"
pylint = "^3.0.2"
torch = "^2.0.0"
markupsafe = "2.1.3"
triton = ">=2.1.0"
prettytable = "^3.9.0"
docopt = "^0.6.2"
openai = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
